# pretty-mod

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  justfile  pyproject.toml
.github/: check_version.py
.github/workflows/: CI.yml  publish.yml  static-analysis.yml  tests.yml
examples/: 0_hello.py  1_tree.py  2_sig.py  README.md  advanced_exploration.py  basic_usage.py
python/pretty_mod/: __init__.py  __main__.py  _pretty_mod.pyi  cli.py  explorer.py
scripts/: compare_local.py  compare_versions.py  perf_test.py  profile.py  profile_bottleneck.py
src/: config.rs  explorer.rs  import_resolver.rs  import_resolver_v2.rs  lib.rs  module_info.rs  output_format.rs  package_downloader.rs  semantic.rs  signature.rs  stdlib.rs  tree_formatter.rs  utils.rs
src/pretty_mod/: __init__.py  cli.py  explorer.py
src/pretty_mod/_internal/: cli_impl.py  explorer.py  utils.py
tests/: conftest.py  test_cli.py  test_double_colon.py  test_explorer.py  test_import_chain.py  test_json_output.py
