[package]
name = "pretty-mod"
version = "0.1.2"
edition = "2021"

[lib]
name = "pretty_mod"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff" }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"
