[project]
name = "pretty-mod"
description = "A module tree explorer for humans and LLMs"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = ["pytest-sugar", "ruff", "ty", "ipython", "pre-commit"]

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pretty_mod"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ty.src]
root = "./src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]